fixed problem with block scrollbar adding horiz content to home page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,29 @@
     color: $accent-color;
 }
 
+::-webkit-scrollbar-track {
+    display: none;
+    border-color: transparent;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar * {
+    background: transparent;
+}
+
+::-webkit-scrollbar {
+    width: rem(7);
+    min-width: rem(7);
+    height: rem(7);
+    min-height: rem(7);
+}
+
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: rem(10);
+    background-color: #666;
+    -webkit-box-shadow: inset 0 0 0;
+}
